--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
               <option value="35 to 44">35 - 44</option>
               <option value="45 to 54">45 - 54</option>
               <option value="55 to 64">55 - 64</option>
-              <option value="65+">65 or over</option>
+              <option value="65+">65 and over</option>
             </select>
           </div>
       </fieldset>
 	    <fieldset>
 	      <legend><h3>My Availability</h3></legend>
-		      <label>Days Available</label>
+		      <label>Days Available:</label>
 		      <div>
-            <label>Monday: <input type="checkbox" name="available_field[]" value="Monday"></label>
-       	    <label>Tuesday: <input type="checkbox" name="available_field[]" value="Tuesday"></label>
-       	    <label>Wednesday: <input type="checkbox" name="available_field[]" value="Wednesday"></label>
-       	    <label>Thursday: <input type="checkbox" name="available_field[]" value="Thursday"></label>
-       	    <label>Friday: <input type="checkbox" name="available_field[]" value="Friday"></label>
-       	    <label>Saturday: <input type="checkbox" name="available_field[]" value="Saturday"></label>
-       	    <label>Sunday: <input type="checkbox" name="available_field[]" value="Sunday"></label>
+            <label>Monday<input type="checkbox" name="available_field[]" value="Monday"></label><br>
+       	    <label>Tuesday<input type="checkbox" name="available_field[]" value="Tuesday"></label><br>
+       	    <label>Wednesday<input type="checkbox" name="available_field[]" value="Wednesday"></label><br>
+       	    <label>Thursday<input type="checkbox" name="available_field[]" value="Thursday"></label><br>
+       	    <label>Friday<input type="checkbox" name="available_field[]" value="Friday"></label><br>
+       	    <label>Saturday<input type="checkbox" name="available_field[]" value="Saturday"></label><br>
+       	    <label>Sunday<input type="checkbox" name="available_field[]" value="Sunday"></label><br>
           </div>
           <div>
             <label>Any Comments?</label>
-            <textarea name = "comments_field"></textarea>
+            <textarea cols="30" rows="50" name = "comments_field"></textarea>
           </div>
           <div>
             <input type = "hidden" name = "hidden_field" value = "szheng12">
