--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
        	    <label>Sunday<input type="checkbox" name="available_field[]" value="Sunday"></label><br>
           </div>
           <div>
-            <label>Any Comments?</label>
-            <textarea cols="30" rows="50" name = "comments_field"></textarea>
+            <label>Any Comments?</label><br>
+            <textarea cols="30" rows="5" name = "comments_field"></textarea>
           </div>
           <div>
             <input type = "hidden" name = "hidden_field" value = "szheng12">
