--- a/index.html
+++ b/index.html
@@ -48,13 +48,20 @@
 	      <legend><h3>My Availability</h3></legend>
 		      <label>Days Available:</label>
 		      <div>
-            <label>Monday<input type="checkbox" name="available_field[]" value="Monday"></label><br>
-       	    <label>Tuesday<input type="checkbox" name="available_field[]" value="Tuesday"></label><br>
-       	    <label>Wednesday<input type="checkbox" name="available_field[]" value="Wednesday"></label><br>
-       	    <label>Thursday<input type="checkbox" name="available_field[]" value="Thursday"></label><br>
-       	    <label>Friday<input type="checkbox" name="available_field[]" value="Friday"></label><br>
-       	    <label>Saturday<input type="checkbox" name="available_field[]" value="Saturday"></label><br>
-       	    <label>Sunday<input type="checkbox" name="available_field[]" value="Sunday"></label><br>
+            <input type="checkbox" id="sunday" name="available_field" value="Sunday">
+            <label for="sunday">Sunday</label><br>
+            <input type="checkbox" id="monday" name="available_field" value="Monday">
+            <label for="sunday">Monday</label><br>
+            <input type="checkbox" id="Tuesday" name="available_field" value="Tuesday">
+            <label for="sunday">Tuesday</label><br>
+            <input type="checkbox" id="Wednesday" name="available_field" value="Wednesday">
+            <label for="sunday">Wednesday</label><br>
+            <input type="checkbox" id="Thursday" name="available_field" value="Thursday">
+            <label for="sunday">Thursday</label><br>
+            <input type="checkbox" id="Friday" name="available_field" value="Friday">
+            <label for="sunday">Friday</label><br>
+            <input type="checkbox" id="Saturday" name="available_field" value="Saturday">
+            <label for="sunday">Saturday</label><br>
           </div>
           <div>
             <label>Any Comments?</label><br>
